--- a/Recipes/doro-wote.html
+++ b/Recipes/doro-wote.html
@@ -6,6 +6,7 @@
     <title>The odin recipes|doro-wote</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
     <h1>Doro Wote</h1>
 </body>
 </html>
