--- a/Recipes/kitfo.html
+++ b/Recipes/kitfo.html
@@ -6,6 +6,7 @@
     <title>The odin recipes|kitfo</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
     <h1>Kitfo</h1>
 </body>
 </html>
