--- a/Recipes/tibes.html
+++ b/Recipes/tibes.html
@@ -6,6 +6,7 @@
     <title>The odin recipes|tibes</title>
 </head>
 <body>
-    
+    <a href="../index.html">Home</a>
+    <h1>Tibes</h1>
 </body>
 </html>
