--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="./Recipes/tibes.html">Tibes</a>
+    <a href="./Recipes/doro-wote.html">Doro-Wote</a>
+    <a href="./Recipes/kitfo.html">Kitfo</a>
 </body>
 </html>
