--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./Recipes/tibes.html">Tibes</a>
-    <a href="./Recipes/doro-wote.html">Doro-Wote</a>
-    <a href="./Recipes/kitfo.html">Kitfo</a>
+    <ul>
+        <li><a href="./Recipes/tibes.html">Tibes</a></li>
+        <li><a href="./Recipes/doro-wote.html">Doro-Wote</a></li>
+        <li><a href="./Recipes/kitfo.html">Kitfo</a></li>
+    </ul>
 </body>
 </html>
