Added a list of ingredient and steps followed

--- a/Recipes/doro-wote.html
+++ b/Recipes/doro-wote.html
@@ -8,5 +8,27 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Doro Wote</h1>
+    <img src="../images/doro-wot.jpeg" alt="An image of doro-wot">
+    <h2>About Doro-WOt</h2>
+    <p>Doro wot, meaning "chicken stew" in Amharic, is a popular and iconic Ethiopian dish often considered the national cuisine. It's a spicy chicken stew, traditionally made with chicken, caramelized onions, berbere (a blend of spices), hard-boiled eggs, and served with injera, a spongy flatbread made from teff.</p>
+    <h2>Ingredient</h2>
+    <ul>
+        <li>Chicken</li>
+        <li>Eggs</li>
+        <li>Berbere Spice</li>
+        <li>Niter Kibbeh</li>
+        <li>Onions</li>
+        <li>garlic</li>
+        <li>ginger</li>
+        <li>Tej</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>The onions, garlic and ginger are caramelized</li>
+        <li>Adding the chicken pieces and the spices</li>
+        <li>The chicken is simmered for a long time for about an hour</li>
+        <li>Then add the Niter Kibbeh</li>
+        <li>Eggs are added near the end of the cooking time</li>
+    </ol>
 </body>
 </html>
