Added ingredients and steps to prepare the food

--- a/Recipes/kitfo.html
+++ b/Recipes/kitfo.html
@@ -8,5 +8,19 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Kitfo</h1>
+    <img src="../images/kitfo.jpeg" alt="Image of kitfo">
+    <h2>About Kitfo</h2>
+    <p>Kitfo is a traditional Ethiopian dish, essentially a beef tartare, made with finely minced raw beef marinated in a spiced, clarified butter (niter kibbeh) and a chili-based spice blend (mitmita), often served with cheese (ayib) and greens (gomen).</p>
+    <h2>Ingredient</h2>
+    <ul>
+        <li>Minced Raw Beef</li>
+        <li>Mitmita</li>
+        <li>Niter Kibbeh</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>The minced beef is massaged with the mitmita and niter kibbeh</li>
+        <li>The niter kibbeh is warmed to infuse the beef with its flavors without cooking it</li>
+    </ol>
 </body>
 </html>
