Add the ingredients and steps to create the food

--- a/Recipes/tibes.html
+++ b/Recipes/tibes.html
@@ -8,5 +8,19 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Tibes</h1>
+    <img src="../images/tibes.jpeg" alt="Image of TIbes">
+    <h2>About Tibes</h2>
+    <p>ibs is a popular and flavorful Ethiopian dish consisting of sautéed or grilled meat, often beef or lamb, seasoned with a blend of spices and herbs, commonly including berbere and onions, and is a staple in Ethiopian cuisine, served at events and celebrations</p>
+    <h2>Ingredient</h2>
+    <ul>
+        <li>Meat (beef, lamb)</li>
+        <li>Berbere Spice</li>
+        <li>Onions</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>The meat is marinated in berbere and onions</li>
+        <li>The meat is then sautéed or grilled</li>
+    </ol>
 </body>
 </html>
