--- a/Recipes/tibes.html
+++ b/Recipes/tibes.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <a href="../index.html">Home</a>
-    <h1>Tibes</h1>
-    <img src="../images/tibes.jpeg" alt="Image of TIbes">
-    <h2>About Tibes</h2>
-    <p>ibs is a popular and flavorful Ethiopian dish consisting of sautéed or grilled meat, often beef or lamb, seasoned with a blend of spices and herbs, commonly including berbere and onions, and is a staple in Ethiopian cuisine, served at events and celebrations</p>
-    <h2>Ingredient</h2>
-    <ul>
+    <h1 class="cl-1">Tibes</h1>
+    <img src="../images/tibes.jpeg" alt="Image of TIbes" class="img cl-1">
+    <h2 class="cl-1">About Tibes</h2>
+    <p class="p-1">Tibs is a popular and flavorful Ethiopian dish consisting of sautéed or grilled meat, often beef or lamb, seasoned with a blend of spices and herbs, commonly including berbere and onions, and is a staple in Ethiopian cuisine, served at events and celebrations</p>
+    <h2 class="cl-1">Ingredient</h2>
+    <ul class="li-1">
         <li>Meat (beef, lamb)</li>
         <li>Berbere Spice</li>
         <li>Onions</li>
     </ul>
-    <h2>Steps</h2>
-    <ol>
+    <h2 class="cl-1">Steps</h2>
+    <ol class="li-1">
         <li>The meat is marinated in berbere and onions</li>
         <li>The meat is then sautéed or grilled</li>
     </ol>
