--- a/Recipes/tibes.html
+++ b/Recipes/tibes.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>The odin recipes|tibes</title>
 </head>
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../index.html"><button class="hov">Home</button></a>
     <h1 class="cl-1">Tibes</h1>
     <img src="../images/tibes.jpeg" alt="Image of TIbes" class="img cl-1">
     <h2 class="cl-1">About Tibes</h2>
