Add button and style to it

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./Recipes/tibes.html">Tibes</a></li>
-        <li><a href="./Recipes/doro-wote.html">Doro-Wote</a></li>
-        <li><a href="./Recipes/kitfo.html">Kitfo</a></li>
+        <li><a href="./Recipes/tibes.html"><button class="hov ind">Tibes</button></a></li>
+        <li><a href="./Recipes/doro-wote.html"><button class="hov ind">Doro-Wote</button></a></li>
+        <li><a href="./Recipes/kitfo.html"><button class="hov ind">Kitfo</button></a></li>
     </ul>
 </body>
 </html>
