Add class used for changing the style of the page

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Recipes</title>
+    <title>Ethiopian recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="h-1">Traditional Ethiopian food recipes</h1>
     <ul>
-        <li><a href="./Recipes/tibes.html"><button class="hov ind">Tibes</button></a></li>
-        <li><a href="./Recipes/doro-wote.html"><button class="hov ind">Doro-Wote</button></a></li>
-        <li><a href="./Recipes/kitfo.html"><button class="hov ind">Kitfo</button></a></li>
+        <li><a href="./Recipes/tibes.html" class="link"><button>Tibes</button></a></li>
+        <li><a href="./Recipes/doro-wote.html" class="link"><button>Doro-Wote</button></a></li>
+        <li><a href="./Recipes/kitfo.html" class="link"><button>Kitfo</button></a></li>
     </ul>
 </body>
 </html>
