Wrap into a div
Starting from scratch by using div

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Ethiopian recipes</title>
 </head>
 <body>
-    <h1 class="h-1">Traditional Ethiopian food recipes</h1>
+<div class="container">
+    <h1>The Ethiopian Traditional Food Recipes</h1>
     <ul>
-        <li><a href="./Recipes/tibes.html" class="link"><button>Tibes</button></a></li>
-        <li><a href="./Recipes/doro-wote.html" class="link"><button>Doro-Wote</button></a></li>
-        <li><a href="./Recipes/kitfo.html" class="link"><button>Kitfo</button></a></li>
+        <li>
+            <a href="./Recipes/doro-wote.html">Doro-Wot</a>
+        </li>
     </ul>
+</div>
 </body>
 </html>
