Wrap up into div

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <h1>The Ethiopian Traditional Food Recipes</h1>
     <ul>
         <li>
-            <a href="./Recipes/doro-wote.html">Doro-Wot</a>
+            <a href="./Recipes/tibes.html" class="a-1">Tibes</a>
+        </li>
+        <li>
+            <a href="./Recipes/doro-wote.html" class="a-1">Doro-Wot</a>
+        </li>
+        <li>
+            <a href="./Recipes/kitfo.html" class="a-1">Kitfo</a>
         </li>
     </ul>
 </div>
