Add an image to the index.html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <div class="container">
     <h1>The Ethiopian Traditional Food Recipes</h1>
+    <img src="./images/download.png" alt="">
     <ul>
         <li>
             <a href="./Recipes/tibes.html" class="a-1">Tibes</a>
